# fitness_workout_tracker_api

./: Cargo.toml  README.md  diesel.toml
migrations/20240000000000_create_messages/: down.sql  up.sql
src/: db.rs  handlers.rs  main.rs  models.rs  schema.rs  services.rs
src/db/: db.rs  schema.rs
src/handlers/: auth.rs  message.rs
src/middleware/: auth.rs
src/models/: message.rs
src/services/: auth_service.rs  message_service.rs
