[package]
name = "fitness_workout_tracker_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
